[gd_scene load_steps=2 format=3 uid="uid://ch5nhx35f6sqe"]

[ext_resource type="Script" path="res://ui/inventory.gd" id="1_55vsh"]

[node name="inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_55vsh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "Upgrade"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Upgrade 2"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Upgrade 3"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Upgrade 4"
